git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@15 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/BrightEdu.html
+++ b/war/BrightEdu.html
@@ -50,11 +50,17 @@
     <table align="center">
 
       <tr>
+      	<td id="nameLabelContainer"></td>
         <td id="nameFieldContainer"></td>
 
       </tr>
+            <tr>
+      	<td id="passwordlabelContainer"></td>
+        <td id="passwordFieldContainer"></td>
+
+      </tr>
       <tr>
-      		        <td id="sendButtonContainer"></td>
+      		        <td colspan="2" id="sendButtonContainer"></td>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
