separate the div structure into 2 divs, one is head, the other is loading message
git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@38 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/BrightEdu.html
+++ b/war/BrightEdu.html
@@ -48,16 +48,18 @@
 	</noscript>
 
 
-	<div id="loading" align="center">
+	<div id="head" align="center">
 		<div class="loadingIndicator">
 			<!--<img src="images/pieces/48/cube_green.gif" width="32" height="32" style="margin-right:8px;float:left;vertical-align:top;"/>SmartGWT<br/>-->
 			<img src="images/jm.png" /> 
 			</br>
-			<img src="images/wait.gif" /> 
-			</br>
-			<span id="loadingMsg">请稍后...</span>
+			
 		</div>
 	</div>
+	<div id="loading" align="center">
+	    <img id="loadingImg" src="images/wait.gif" /> 
+		</br>
+		<span id="loadingMsg">请稍后...</span>
 	</div>
 
 
